# needle

./: CMakeLists.txt  LICENSE  README.md  main.cpp
activation-functions/: sigmoid.h
autoGradEngine/: node.h
layers/: layer.h  network.h  neuron.h
models/: binaryClassifier.h  multiClassClassifier.h
nn/: layer.h  neuron.h
nnComponents/: binaryClassifier.h  layer.h  module.h  network.h  neuron.h
nnComponents/activations/: relu.h  sigmoidNode.h  simoidNode.h  softmax.h
nnComponents/lossFunctions/: binaryCrossEntropy.h  categoricalCrossEntropy.h
nnComponents/optimizers/: SGD.h
nnComponents/trainers/: trainer.h
nn_components/: layer.h  module.h  network.h  neuron.h
random-generators/: randomWeightGenerator.h
tests/integration/: test_models.cpp
tests/unit/: test_autoGradEngine.cpp  test_expressionNode.cpp  test_lossFunctions.cpp  test_nnComponents.cpp  test_node.cpp  test_optimizerUtils.cpp  test_robustness.cpp  test_sigmoid.cpp  test_softmax.cpp
utils/: expressionNode.h  helperFunctions.h  loss.h  node.h
utils/activation-functions/: sigmoid.h  softmax.h
utils/datasets/: Dataset.h  irisDataset.h  mushroomDataset.h  simpleMultiClassDataset.h  xorDataset.h
utils/loss-functions/: crossEntropy.h  crossentropy.h
utils/lossFunctions/: binaryCrossEntropy.h
utils/optimizers/: sgdOptimizer.h
utils/random-generators/: randomBiasGenerator.h  randomWeightGenerator.h
utils/randomGenerators/: randomBiasGenerator.h  randomWeightGenerator.h
utils/serialization/: modelSerializer.h
